# FastApi_poetry_Todos

./: pyproject.toml
fastapi_poetry_todos/: .env  crud.py  database.py  main.py  models.py  schemas.py
tests/: test_main.py
